fix typing issue in decoder

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "maxmind-db/reader",
+    "name": "dodo1708/maxmind-db-reader",
     "description": "MaxMind DB Reader API",
     "keywords": ["database", "geoip", "geoip2", "geolocation", "maxmind"],
     "homepage": "https://github.com/maxmind/MaxMind-DB-Reader-php",
